# get-papers-project

./: README.md  output_papers.csv  pubmed_non_academic_papers.csv  pyproject.toml
src/get_papers_project/: cli.py  fetcher.py  filter.py
